// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BusinessCard Component When provided with business info Should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BusinessCard
    business={
      Object {
        "categories": Array [
          Object {
            "alias": "delis",
            "title": "Delis",
          },
        ],
        "coordinates": Object {
          "latitude": 37.7983818054199,
          "longitude": -122.407821655273,
        },
        "id": "molinari-delicatessen-san-francisco",
        "image_url": "http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg",
        "location": Object {
          "address1": "373 Columbus Ave",
          "address2": "",
          "address3": "",
          "city": "San Francisco",
          "country": "US",
          "state": "CA",
          "zip_code": "94133",
        },
        "name": "Molinari Delicatessen",
        "phone": "+14154212337",
        "price": "$$",
        "rating": 4.5,
        "review_count": 910,
        "url": "https://www.yelp.com/biz/molinari-delicatessen-san-francisco",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <WithStyles(CardActionArea)>
        <WithStyles(CardMedia)
          className="business-card-media"
          image="http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg"
          title="http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg"
        />
        <WithStyles(CardContent)>
          <WithStyles(Typography)
            component="h2"
            gutterBottom={true}
            variant="h5"
          >
            Molinari Delicatessen
          </WithStyles(Typography)>
          <WithStyles(Typography)
            component="p"
          >
            Price: 
            $$
             
            <br />
            Rating: 
            4.5
             
            <br />
            Review Counts: 
            910
          </WithStyles(Typography)>
        </WithStyles(CardContent)>
      </WithStyles(CardActionArea)>,
      "className": "business-card",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": "Molinari Delicatessen",
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <WithStyles(CardMedia)
            className="business-card-media"
            image="http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg"
            title="http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg"
          />,
          <WithStyles(CardContent)>
            <WithStyles(Typography)
              component="h2"
              gutterBottom={true}
              variant="h5"
            >
              Molinari Delicatessen
            </WithStyles(Typography)>
            <WithStyles(Typography)
              component="p"
            >
              Price: 
              $$
               
              <br />
              Rating: 
              4.5
               
              <br />
              Review Counts: 
              910
            </WithStyles(Typography)>
          </WithStyles(CardContent)>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "className": "business-card-media",
            "image": "http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg",
            "title": "http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <WithStyles(Typography)
                component="h2"
                gutterBottom={true}
                variant="h5"
              >
                Molinari Delicatessen
              </WithStyles(Typography)>,
              <WithStyles(Typography)
                component="p"
              >
                Price: 
                $$
                 
                <br />
                Rating: 
                4.5
                 
                <br />
                Review Counts: 
                910
              </WithStyles(Typography)>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": "Molinari Delicatessen",
                "component": "h2",
                "gutterBottom": true,
                "variant": "h5",
              },
              "ref": null,
              "rendered": "Molinari Delicatessen",
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "children": Array [
                  "Price: ",
                  "$$",
                  " ",
                  <br />,
                  "Rating: ",
                  4.5,
                  " ",
                  <br />,
                  "Review Counts: ",
                  910,
                ],
                "component": "p",
              },
              "ref": null,
              "rendered": Array [
                "Price: ",
                "$$",
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                "Rating: ",
                4.5,
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                "Review Counts: ",
                910,
              ],
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <WithStyles(CardActionArea)>
          <WithStyles(CardMedia)
            className="business-card-media"
            image="http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg"
            title="http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg"
          />
          <WithStyles(CardContent)>
            <WithStyles(Typography)
              component="h2"
              gutterBottom={true}
              variant="h5"
            >
              Molinari Delicatessen
            </WithStyles(Typography)>
            <WithStyles(Typography)
              component="p"
            >
              Price: 
              $$
               
              <br />
              Rating: 
              4.5
               
              <br />
              Review Counts: 
              910
            </WithStyles(Typography)>
          </WithStyles(CardContent)>
        </WithStyles(CardActionArea)>,
        "className": "business-card",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": "Molinari Delicatessen",
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <WithStyles(CardMedia)
              className="business-card-media"
              image="http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg"
              title="http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg"
            />,
            <WithStyles(CardContent)>
              <WithStyles(Typography)
                component="h2"
                gutterBottom={true}
                variant="h5"
              >
                Molinari Delicatessen
              </WithStyles(Typography)>
              <WithStyles(Typography)
                component="p"
              >
                Price: 
                $$
                 
                <br />
                Rating: 
                4.5
                 
                <br />
                Review Counts: 
                910
              </WithStyles(Typography)>
            </WithStyles(CardContent)>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "className": "business-card-media",
              "image": "http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg",
              "title": "http://s3-media4.fl.yelpcdn.com/bphoto/6He-NlZrAv2mDV-yg6jW3g/o.jpg",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <WithStyles(Typography)
                  component="h2"
                  gutterBottom={true}
                  variant="h5"
                >
                  Molinari Delicatessen
                </WithStyles(Typography)>,
                <WithStyles(Typography)
                  component="p"
                >
                  Price: 
                  $$
                   
                  <br />
                  Rating: 
                  4.5
                   
                  <br />
                  Review Counts: 
                  910
                </WithStyles(Typography)>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Molinari Delicatessen",
                  "component": "h2",
                  "gutterBottom": true,
                  "variant": "h5",
                },
                "ref": null,
                "rendered": "Molinari Delicatessen",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "Price: ",
                    "$$",
                    " ",
                    <br />,
                    "Rating: ",
                    4.5,
                    " ",
                    <br />,
                    "Review Counts: ",
                    910,
                  ],
                  "component": "p",
                },
                "ref": null,
                "rendered": Array [
                  "Price: ",
                  "$$",
                  " ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": "br",
                  },
                  "Rating: ",
                  4.5,
                  " ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": "br",
                  },
                  "Review Counts: ",
                  910,
                ],
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`BusinessCard Component When provided with no info Should render correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <BusinessCard />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <WithStyles(CircularProgress) />,
      "className": "business-card",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <WithStyles(CircularProgress) />,
        "className": "business-card",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
